# floppier

./: Cargo.toml  README.md
floppier-client/: Cargo.toml
floppier-client/.cargo/: config.toml
floppier-client/src/: floppy_drive.rs  instrument.rs  io.rs  lib.rs  macros.rs  main.rs  note.rs  shift_register.rs  sn74hc595.pio
floppier-client/src/instrument/: floppy_drive.rs  mod.rs
floppier-proto/: Cargo.toml
floppier-proto/src/: lib.rs
floppier-server/: Cargo.toml
floppier-server/src/: config.rs  io.rs  lib.rs  main.rs  midi.rs
hardware/: .gitignore  drive_controller.kicad_pcb  drive_controller.kicad_pro  drive_controller.kicad_sch
hardware/drive_controller_master/: can.kicad_sch  drive_controller_master.kicad_pcb  drive_controller_master.kicad_pro  drive_controller_master.kicad_sch  floppy.kicad_sch  power.kicad_sch  rp2040.kicad_sch  ~drive_controller_master.kicad_sch.lck
hardware/drive_controller_master/jlcpcb/: project.db
midi/: aha-take-on-me.jsonc  aha-take-on-me.mid  imperial-march.jsonc  imperial-march.toml  pirates-of-the-caribbean.jsonc  pirates-of-the-caribbean.toml  toto-africa.jsonc  toto-africa.toml
