[package]
name = "floppier-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Adrian Wowk <dev@adrianwowk.com>"]

[dependencies]
rp-pico = "0.8.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-time = "0.12.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt = { version = "0.3.0", features = ["alloc"] }
defmt-rtt = "0.4.0"
embedded-hal = "0.2.5"
ciborium = { version = "0.2.1", default-features = false }
usb-device = { version = "0.2.9", features = ["defmt"] }
usbd-serial = "0.1.1"
embedded-alloc = "0.5.1"
floppier-proto = { path = "../floppier-proto", features = ["defmt"] }
