[package]
name = "floppier-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Adrian Wowk <dev@adrianwowk.com>"]

default-run = "floppier-client"

[dependencies]
ciborium = { version = "0.2.1", default-features = false }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
critical-section = "1.1.3"
defmt = { version = "0.3.0", features = ["alloc"] }
defmt-rtt = "0.4.0"
embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
floppier-proto = { path = "../floppier-proto", features = ["defmt"] }
heapless = "0.8.0"
num_enum = { version = "0.7.3", default-features = false }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.9.0"
seq-macro = "0.3.5"
usb-device = { version = "0.3.2" }
usbd-serial = "0.2.2"

[features]
io_debug = []

[profile.dev]
opt-level = 2
lto = true
codegen-units = 1

# don't optimize the `cortex-m-rt` crate
[profile.dev.package.cortex-m-rt] # +
opt-level = 0 # +

# but do optimize all the other dependencies
[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[profile.release]
debug = false
opt-level = 3
lto = true
strip = true
overflow-checks = false
debug-assertions = false
codegen-units = 1 

# don't optimize the `cortex-m-rt` crate
[profile.release.package.cortex-m-rt] # +
opt-level = 0 # +

# but do optimize all the other dependencies
[profile.release.package."*"]
codegen-units = 1 # better optimizations
opt-level = "s"
