[package]
name = "floppier-proto"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", default-features = false, features = [
    "derive",
    "alloc",
] }
defmt = { version = "0.3.5", optional = true }

[features]
defmt = ["dep:defmt"]
